# hack-for-health-hackathon

./: .gitignore  Dockerfile  README.md  dotennvexample  pyproject.toml  requirements.txt
dataexploration/: corti_create_new_interaction.py  corti_transcript1.py  create_transcript.py  create_upload_recording.py  create_whisper_transcript.py  database.py  get_corti_bearer_token.py  load_coral.py  manuscript.py  server.py  transcript_improver.py
dataexploration/static/: index.html  index.js
dataexploration/temp_uploads/: 1f8e55e8-b899-4f60-8ebc-9adb9ed8f8eb_sepsis_reading.webm  24be4ebe-a9c5-4f79-a791-8d915e8081de_sepsis_reading.webm  2c64f623-8b09-44c5-91ba-9090d2458a58_sepsis_reading.webm  6fe37ea4-8d91-4140-95f9-5612e6c1c581_sepsis_reading.webm  7233795a-aad4-40bc-867b-a4ec3775f57e_sepsis_reading.webm  a4047a8b-f7d0-4a08-951f-95cd82279491_sepsis_reading.webm
