[project]
name = "hack-for-health-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "openai>=1.93.0",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "uvicorn>=0.35.0",
]
